--- a/my-practice-next/src/styles/dialog.scss
+++ b/my-practice-next/src/styles/dialog.scss
@@ -1,33 +1,34 @@
-.modal-open {
-    padding-right: 0px !important;
-}
-
-#login-dialogs {
-    overflow-y: hidden;
-}
-
 .login-dialogs-content {
-    width : 1150px;
-    margin: 20vh auto;
+    // width           : 1150px;
+    position        : fixed;
+    top             : 0;
+    left            : 0;
+    width           : 100%;
+    height          : 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index         : 15;
+    // margin: 20vh auto;
 
     .media-content {
-        padding            : 100px 30px;
-        width              : 360px;
-        background-repeat  : no-repeat;
-        background-position: center center;
-        background-size    : cover;
-        background-image   : url(http://tmp-test.sofishgame.com/public/images/homebg.png);
-        height             : 600px;
-        position           : relative;
-        z-index            : 1;
-        display            : flex;
-        flex-direction     : column;
-        justify-content    : center;
-        align-items        : center;
-        text-align         : center;
-        color              : #aaa;
-        font-size          : 16px;
-        line-height        : 1.63em;
+        padding                  : 100px 30px;
+        width                    : 360px;
+        border-top-left-radius   : 10px;
+        border-bottom-left-radius: 10px;
+        background-repeat        : no-repeat;
+        background-position      : center center;
+        background-size          : cover;
+        background-image         : url(http://tmp-test.sofishgame.com/public/images/homebg.png);
+        height                   : 600px;
+        position                 : relative;
+        z-index                  : 1;
+        display                  : flex;
+        flex-direction           : column;
+        justify-content          : center;
+        align-items              : center;
+        text-align               : center;
+        color                    : #aaa;
+        font-size                : 16px;
+        line-height              : 1.63em;
     }
 
     &.media-content .heading {
@@ -40,15 +41,17 @@
     }
 
     .media-content:before {
-        content   : "";
-        left      : 0;
-        right     : 0;
-        top       : 0;
-        bottom    : 0;
-        background: #000;
-        opacity   : 0.5;
-        position  : absolute;
-        z-index   : -1;
+        content                  : "";
+        left                     : 0;
+        right                    : 0;
+        top                      : 0;
+        bottom                   : 0;
+        background               : #000;
+        opacity                  : 0.5;
+        position                 : absolute;
+        z-index                  : -1;
+        border-top-left-radius   : 10px;
+        border-bottom-left-radius: 10px;
     }
 
     .inner-login {
@@ -66,28 +69,31 @@
     }
 
     .login-popup {
-        height    : 0;
-        left      : 0;
-        right     : 0;
-        bottom    : 0;
-        top       : 0;
-        transition: all 0.6s;
-        filter    : alpha(opacity=0);
-        opacity   : 0;
-        transform : translate(0, -50px);
-        visibility: hidden;
-        width     : 100%;
+        // height    : 0;
+        // left      : 0;
+        // right     : 0;
+        // bottom    : 0;
+        // top       : 0;
+        background-color      : #fff;
+        transition            : all 0.6s;
+        // filter             : alpha(opacity=0);
+        // opacity            : 0;
+        // transform          : translate(0, -50px);
+        // visibility         : hidden;
+        // width           : 100%;
+        display               : flex;
+        width                 : 1150px;
+        margin                : 20vh auto;
+        border-radius         : 10px;
+        transform             : translate(0, 0);
+        opacity               : 1;
+        visibility            : visible;
+        height                : auto;
+        // &.active {
+        //     z-index   : 2;
 
-        /*overflow-x: hidden;*/
-        display: flex;
 
-        &.active {
-            z-index   : 2;
-            transform : translate(0, 0);
-            opacity   : 1;
-            visibility: visible;
-            height    : auto;
-        }
+        // }
     }
 
     .popup-close {
@@ -235,6 +241,7 @@
             border        : 1px solid #ccc;
             border-radius : 0;
             vertical-align: middle;
+            margin        : 0 0 0;
             margin-bottom : 0.1em;
             margin-right  : 0.2em;
         }
@@ -292,13 +299,13 @@
 }
 
 @media (max-width: 1400px) and (min-width: 1024px) {
-    #login-dialogs .login-dialogs-content {
+    .login-popup {
         width: 930px;
     }
 }
 
 @media (max-width: 1024px) and (min-width: 767px) {
-    #login-dialogs .login-dialogs-content {
+    .login-popup {
         width: 80%;
 
         .media-content {
@@ -308,7 +315,7 @@
 }
 
 @media (max-width: 767px) {
-    #login-dialogs .login-dialogs-content {
+    .login-popup {
         width: 80%;
 
         .media-content {
@@ -318,11 +325,14 @@
 }
 
 @media (max-width: 480px) {
-    #login-dialogs .login-dialogs-content {
-        width : calc(90% - 50px);
-        margin: 10vh auto;
+    .login-dialogs-content {
+
+        // 
 
         .login-popup {
+            width : calc(90% - 50px);
+            margin: 10vh auto;
+
             .inner-login {
                 padding: 10vw 10vw 8vw 10vw;
 
