--- a/my-practice-next/src/styles/section.scss
+++ b/my-practice-next/src/styles/section.scss
@@ -387,15 +387,19 @@
     position        : fixed;
     top             : 0;
     bottom          : 0;
-    z-index         : 99999;
+    z-index         : 66;
     width           : 270px;
     height          : 100%;
     padding-top     : 65px;
     overflow        : auto;
-    transition      : all 0.5s;
+    transform       : translateX(-100%);
+    transition      : all 0.5s ease-in-out;
     visibility      : visible;
     box-shadow      : 0 1px 5px -2px rgba(42, 42, 42, 0.4);
-    transform       : translate(0, 0);
+
+    &.mobile-menu-open {
+        transform: translate(0, 0);
+    }
 
     .navbar-nav {
         // display      : none;
@@ -887,4 +891,8 @@ form#registerform {
         width : 6vw;
         height: 6vw;
     }
+}
+
+.lang-s {
+    color: green !important;
 }
