--- a/my-practice-next/src/styles/section.scss
+++ b/my-practice-next/src/styles/section.scss
@@ -383,26 +383,25 @@
 
 // 
 .mobile-menu-container {
-    background-color: #222;
-    position        : fixed;
-    top             : 0;
-    bottom          : 0;
-    z-index         : 66;
-    width           : 270px;
-    height          : 100%;
-    padding-top     : 65px;
-    overflow        : auto;
-    transform       : translateX(-100%);
-    transition      : all 0.5s ease-in-out;
-    visibility      : visible;
-    box-shadow      : 0 1px 5px -2px rgba(42, 42, 42, 0.4);
+    background-color   : #222;
+    position           : fixed;
+    top                : 0;
+    bottom             : 0;
+    z-index            : 66;
+    width              : 45vw;
+    height             : 100%;
+    padding-top        : 65px;
+    overflow           : auto;
+    // transform       : translateX(-100%);
+    transition         : all 0.5s ease-in-out;
+    visibility         : visible;
+    box-shadow         : 0 1px 5px -2px rgba(42, 42, 42, 0.4);
 
-    &.mobile-menu-open {
-        transform: translate(0, 0);
-    }
+    // &.mobile-menu-open {
+    //     transform: translate(0, 0);
+    // }
 
     .navbar-nav {
-        // display      : none;
         padding-left : 15px;
         padding-right: 15px;
 
@@ -638,7 +637,7 @@
     }
 }
 
-form#registerform {
+form#register-form {
     >p {
         margin-bottom: 0;
 
@@ -893,6 +892,6 @@ form#registerform {
     }
 }
 
-.lang-s {
-    color: green !important;
+.ant-select-arrow {
+    color: #fff !important;
 }
