--- a/my-practice-next/src/styles/index.scss
+++ b/my-practice-next/src/styles/index.scss
@@ -469,8 +469,8 @@
                 }
 
                 .meta-info {
-                    position: absolute;
-                    z-index : 10;
+                    position      : absolute;
+                    z-index       : 10;
                     width         : 100%;
                     height        : 100%;
                     display       : flex;
@@ -982,6 +982,7 @@
                     text-align        : left;
                     word-break        : break-word;
                     display           : -webkit-box;
+                    line-clamp        : 2;
                     -webkit-line-clamp: 2;
                     -webkit-box-orient: vertical;
                     overflow          : hidden;
