--- a/my-practice-next/src/styles/common.scss
+++ b/my-practice-next/src/styles/common.scss
@@ -170,7 +170,7 @@ form#lost-password-form .description {
 }
 
 .home-2 {
-    .bp-element-posts.vblog-layout-slider-3 {
+    .bp-element-posts {
         .heading-post {
             border-color: #d7d7d7;
 
